infra/ingress/booking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-ingress
  namespace: booking-app
spec:
  ingressClassName: traefik
  rules:
    - host: booking.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-app-service
                port:
                  number: 80
